--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  min-width: 320px;
+  /* min-width: 320px; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
