--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,6 @@ a:hover {
 
 body {
   margin: 0;
-  /* min-width: 320px; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -64,6 +63,7 @@ button:focus-visible {
   display: grid;
   width: 100%;
   gap: 7vh;
+  overflow: hidden;
 }
 
 @media (prefers-color-scheme: light) {
